--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "modular-in-js",
   "version": "1.0.0",
   "description": "JS Assignment Repository",
-  "main": "colorCoder.js",
+  "main": "colorPairTests.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/colorCoder.js"
+    "start": "node app/colorPairTests.js"
   },
   "author": "",
   "license": "ISC"
